--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "fw27Team",
-            "email": "dev@fwext.local"
+            "email": "dev@fw27.local"
         }
     ],
     "autoload": {
