--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@fw-ext/gif-picker",
+    "name": "@fw27/gif-pocket",
     "private": true,
     "version": "0.0.0",
     "dependencies": {
